Update RASA license and initialization commands

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ RASA_LICENSE='eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJkMTc4MjNmZC00MTU2L
 source .venv/bin/activate
 rasa init --template tutorial
 rasa train
+rasa inspect
